<resources>
    <string name="app_name">YikasStore</string>
    <string name="txtForgetPassword">Şifremi unuttum</string>
    <string name="txtCreateNewUser">Yeni Hesap Oluştur</string>
    <string name="login">Giriş</string>
    <string name="txtPassword">Şifre</string>
    <string name="txtMail">Mail</string>
    <string name="google_sign">Google İle Giriş</string>
    <string name="txtUserName">İsim - Soyisim</string>
    <string name="txtPasswordAgain">Şifre (Tekrar)</string>
    <string name="btnRegisterSaveUser">Kaydet</string>
    <string name="btnRegisterClear">Temizle</string>
    <string name="create_new_order">Yeni Sipariş Oluştur</string>
    <string name="past_orders">Geçmiş Siparişler</string>
    <string name="menu_profile">Profil</string>
    <string name="menu_categories">Kategoriler</string>
    <string name="menu_campaigns">Kampanyalar</string>
    <string name="menu_contact">İletişim</string>
    <string name="logout">Çıkış Yap</string>
    <string name="cat_categories">Kediler</string>
    <string name="dog_categories">Köpekler</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec gravida iaculis ultrices. Quisque pretium lacinia urna, quis dictum ante ultrices sed. Proin molestie odio non ante lacinia tincidunt. Maecenas a turpis in elit viverra euismod. Praesent vitae commodo sem, vitae maximus leo. Nunc eu erat blandit, pulvinar risus sit amet, venenatis lectus. Nullam efficitur lorem et leo volutpat tempus. Vivamus eleifend a sem non auctor. Proin eu arcu nec augue eleifend varius at in sapien. Nullam molestie mi lorem, ultrices vestibulum ex molestie non. Donec blandit scelerisque dolor quis tempor. Vestibulum rutrum dapibus massa, sit amet aliquam diam maximus a. Suspendisse fermentum nulla quis orci pharetra sollicitudin. Morbi id malesuada metus. Phasellus ultricies interdum eros eu ullamcorper. Aliquam erat volutpat. Sed gravida nulla arcu, sed sodales dui interdum id. Maecenas egestas vel nisi condimentum placerat. Nulla ante elit, ultrices eget rhoncus ut, consectetur dictum risus. Sed ultrices vel risus at vestibulum. Nullam ac nulla commodo, mattis quam eu, imperdiet sapien. Nam vel rhoncus erat, quis congue dolor. Ut blandit consectetur fringilla. Nam iaculis dui in nulla rutrum, vel scelerisque velit aliquet. Aenean congue blandit tempor. Donec et leo ac mi maximus fermentum. Sed volutpat, massa commodo venenatis tristique, leo tellus dictum justo, et consequat tortor risus a ligula.</string>
    <string name="add_to_basket">Sepete Ekle</string>
    <string name="product_name">Ürün Adı</string>
    <string name="product_price">00.00 TL</string>
    <string name="go_to_detail">Detaya Git</string>
    <string name="clear_the_basket">Sepeti Temizle</string>
    <string name="complete_the_purchase">Alışverişi Tamamla</string>
    <string name="write_us">Bize Yazın</string>
    <string name="contact_message">Mesajınız</string>
    <string name="send">Gönder</string>
</resources>
