<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_profile"
        android:orderInCategory="100"
        android:title="@string/menu_profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/submenu_cats"
        android:orderInCategory="100"
        android:title="@string/cat_categories"
        app:showAsAction="never" />

    <item
        android:id="@+id/submenu_dogs"
        android:orderInCategory="100"
        android:title="@string/dog_categories"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_campaigns"
        android:orderInCategory="100"
        android:title="@string/menu_campaigns"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_contact"
        android:orderInCategory="100"
        android:title="@string/menu_contact"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>