<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ContactsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/write_us"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/contactName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/txtUserName" />

    <EditText
        android:id="@+id/contactMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/txtMail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/contactMessage"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="15dp"
        android:gravity="start"
        android:hint="@string/contact_message"
        android:maxLines="10" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_text_area"
        android:text="@string/send"
        android:textColor="@color/white"
        android:textSize="18sp"/>

</LinearLayout>