<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtLoginMail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_text_area"
            android:gravity="center"
            android:hint="@string/txtMail"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_text_area"
            android:gravity="center"
            android:hint="@string/txtPassword"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnLoginEnter"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_text_area"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtCreateAnAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="end"
            android:text="@string/txtCreateNewUser" />

        <TextView
            android:id="@+id/txtForgetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="end"
            android:text="@string/txtForgetPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="75dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_google"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:background="@drawable/google_rounded_text_area"
            android:gravity="center"
            android:text="@string/google_sign"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>