<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivProductImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/yikas_logo" />

    <TextView
        android:id="@+id/txtProductName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/product_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="Ürün Adı " />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtProductPrice"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/product_price"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="00.00 TL " />

        <Button
            android:id="@+id/btnProductDetail"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/go_to_detail"
            android:textAlignment="center" />

    </LinearLayout>

</LinearLayout>
