<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_basketProductImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="15dp"
                android:background="@color/background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtBasketProductName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/product_name"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtBasketProductInfo"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/lorem_ipsum"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txtBasketProductPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/product_price"
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <ImageButton
            android:id="@+id/btnDeleteFromBasket"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@color/white"
            android:scaleType="centerCrop"
            tools:src="@drawable/recycler_bin" />

    </LinearLayout>

</LinearLayout>